bk_ida/gccida/c3/gen_lowpart_for_combine
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10227:31: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart_for_combine( machine_mode mode, rtx x) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10232:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10232:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10236:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10249:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10253:1: error: use of undeclared identifier 'result'
result = rtx->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10254:37: error: use of undeclared identifier 'result'
if ( ( unsigned __int16)*( _DWORD *)result == 66 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10257:43: error: use of undeclared identifier 'result'
if ( ( unsigned __int8)BYTE2( *( _DWORD *)result) == mode ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10258:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10261:1: error: use of undeclared identifier 'result'
result = gen_lowpart_common( mode, rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10262:6: error: use of undeclared identifier 'result'
if ( result ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10263:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10280:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, const_int_rtx[64]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10283:26: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                         ^~~~~~~~
                         rtx_cost
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10283:37: error: expected expression
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10283:102: error: expected expression
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                                                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10288:1: error: use of undeclared identifier 'result'
result = simplify_gen_subreg( mode, rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v10); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10288:44: error: use of undeclared identifier 'machine_mode'
result = simplify_gen_subreg( mode, rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/combine.c:10289:7: error: use of undeclared identifier 'result'
if ( !result ) 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_lowpart_for_combine/src/obj/combine.o] Error 1
